Squash and Merge fix/sticky-mobile-nav
Makes mobile menus anchored to the bottom of device screens upon scrolling

--- a/src/ui-components/action-sheet.scss
+++ b/src/ui-components/action-sheet.scss
@@ -3,7 +3,7 @@
   height: auto;
   max-height: 75%;
   background-color: #FFF;
-  position: absolute;
+  position: fixed;
   left: 0px;
   bottom: 0px;
   z-index: $zindex-off-canvas;
